--- a/public/css/app.css
+++ b/public/css/app.css
@@ -411,6 +411,9 @@ video {
 .relative{
   position: relative;
 }
+.sticky{
+  position: sticky;
+}
 .bottom-0{
   bottom: 0px;
 }
@@ -423,28 +426,37 @@ video {
 .top-0{
   top: 0px;
 }
-.top-14{
-  top: 3.5rem;
-}
-.top-10{
-  top: 2.5rem;
-}
 .top-12{
   top: 3rem;
+}
+.top-\[-40px\]{
+  top: -40px;
+}
+.z-10{
+  z-index: 10;
+}
+.z-0{
+  z-index: 0;
+}
+.col-span-2{
+  grid-column: span 2 / span 2;
+}
+.row-span-2{
+  grid-row: span 2 / span 2;
 }
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
 }
-.mx-3{
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
+.my-1{
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
 }
 .-mt-px{
   margin-top: -1px;
 }
-.mb-4{
-  margin-bottom: 1rem;
+.mb-3{
+  margin-bottom: 0.75rem;
 }
 .ml-1{
   margin-left: 0.25rem;
@@ -457,6 +469,9 @@ video {
 }
 .ml-4{
   margin-left: 1rem;
+}
+.ml-5{
+  margin-left: 1.25rem;
 }
 .ml-auto{
   margin-left: auto;
@@ -479,17 +494,29 @@ video {
 .mt-4{
   margin-top: 1rem;
 }
+.mt-5{
+  margin-top: 1.25rem;
+}
 .mt-8{
   margin-top: 2rem;
-}
-.mb-6{
-  margin-bottom: 1.5rem;
 }
 .ml-3{
   margin-left: 0.75rem;
 }
-.ml-5{
-  margin-left: 1.25rem;
+.-mt-2{
+  margin-top: -0.5rem;
+}
+.-mt-6{
+  margin-top: -1.5rem;
+}
+.-mb-3{
+  margin-bottom: -0.75rem;
+}
+.-mb-1{
+  margin-bottom: -0.25rem;
+}
+.block{
+  display: block;
 }
 .inline-block{
   display: inline-block;
@@ -512,6 +539,9 @@ video {
 .h-16{
   height: 4rem;
 }
+.h-36{
+  height: 9rem;
+}
 .h-5{
   height: 1.25rem;
 }
@@ -521,17 +551,38 @@ video {
 .h-9{
   height: 2.25rem;
 }
-.h-screen{
-  height: 100vh;
+.h-\[2px\]{
+  height: 2px;
+}
+.h-\[38px\]{
+  height: 38px;
+}
+.h-\[44px\]{
+  height: 44px;
+}
+.h-6{
+  height: 1.5rem;
 }
 .min-h-screen{
   min-height: 100vh;
+}
+.w-16{
+  width: 4rem;
 }
 .w-5{
   width: 1.25rem;
 }
 .w-8{
   width: 2rem;
+}
+.w-9{
+  width: 2.25rem;
+}
+.w-\[44px\]{
+  width: 44px;
+}
+.w-\[96\%\]{
+  width: 96%;
 }
 .w-auto{
   width: auto;
@@ -545,11 +596,8 @@ video {
 .max-w-6xl{
   max-width: 72rem;
 }
-.max-w-sm{
-  max-width: 24rem;
-}
-.max-w-xs{
-  max-width: 20rem;
+.max-w-\[70\%\]{
+  max-width: 70%;
 }
 .flex-grow{
   flex-grow: 1;
@@ -557,8 +605,20 @@ video {
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
+.grid-cols-5{
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+.grid-rows-2{
+  grid-template-rows: repeat(2, minmax(0, 1fr));
+}
 .flex-col{
   flex-direction: column;
+}
+.flex-wrap{
+  flex-wrap: wrap;
+}
+.items-end{
+  align-items: flex-end;
 }
 .items-center{
   align-items: center;
@@ -566,11 +626,20 @@ video {
 .justify-center{
   justify-content: center;
 }
+.gap-6{
+  gap: 1.5rem;
+}
 .overflow-hidden{
   overflow: hidden;
 }
+.overflow-y-auto{
+  overflow-y: auto;
+}
 .rounded-2xl{
   border-radius: 1rem;
+}
+.rounded-full{
+  border-radius: 9999px;
 }
 .rounded-lg{
   border-radius: 0.5rem;
@@ -578,8 +647,17 @@ video {
 .rounded-xl{
   border-radius: 0.75rem;
 }
-.rounded-tr-full{
-  border-top-right-radius: 9999px;
+.rounded{
+  border-radius: 0.25rem;
+}
+.rounded-bl-none{
+  border-bottom-left-radius: 0px;
+}
+.rounded-br-none{
+  border-bottom-right-radius: 0px;
+}
+.border{
+  border-width: 1px;
 }
 .border-b-2{
   border-bottom-width: 2px;
@@ -587,17 +665,46 @@ video {
 .border-t{
   border-top-width: 1px;
 }
+.border-l-2{
+  border-left-width: 2px;
+}
+.border-r-2{
+  border-right-width: 2px;
+}
+.border-t-2{
+  border-top-width: 2px;
+}
 .border-amber-400{
   --tw-border-opacity: 1;
   border-color: rgb(251 191 36 / var(--tw-border-opacity));
+}
+.border-amber-50{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 251 235 / var(--tw-border-opacity));
 }
 .border-gray-200{
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
+.border-amber-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(245 158 11 / var(--tw-border-opacity));
+}
 .bg-amber-200{
   --tw-bg-opacity: 1;
   background-color: rgb(253 230 138 / var(--tw-bg-opacity));
+}
+.bg-amber-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 211 77 / var(--tw-bg-opacity));
+}
+.bg-amber-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 191 36 / var(--tw-bg-opacity));
+}
+.bg-amber-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 251 235 / var(--tw-bg-opacity));
 }
 .bg-gray-100{
   --tw-bg-opacity: 1;
@@ -615,32 +722,39 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(124 45 18 / var(--tw-bg-opacity));
 }
-.bg-rose-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(225 29 72 / var(--tw-bg-opacity));
-}
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-rose-100{
+.bg-zinc-200{
   --tw-bg-opacity: 1;
-  background-color: rgb(255 228 230 / var(--tw-bg-opacity));
+  background-color: rgb(228 228 231 / var(--tw-bg-opacity));
 }
-.bg-opacity-75{
-  --tw-bg-opacity: 0.75;
+.bg-zinc-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(212 212 216 / var(--tw-bg-opacity));
 }
-.p-3{
-  padding: 0.75rem;
+.bg-red-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+.bg-opacity-30{
+  --tw-bg-opacity: 0.3;
+}
+.p-1{
+  padding: 0.25rem;
+}
+.p-2{
+  padding: 0.5rem;
 }
 .p-4{
   padding: 1rem;
 }
-.p-6{
-  padding: 1.5rem;
-}
 .p-5{
   padding: 1.25rem;
+}
+.p-6{
+  padding: 1.5rem;
 }
 .px-2{
   padding-left: 0.5rem;
@@ -670,8 +784,18 @@ video {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
+.px-1{
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+.pb-1{
+  padding-bottom: 0.25rem;
+}
 .pb-2{
   padding-bottom: 0.5rem;
+}
+.pt-2{
+  padding-top: 0.5rem;
 }
 .pt-8{
   padding-top: 2rem;
@@ -687,9 +811,17 @@ video {
   font-size: 3.75rem;
   line-height: 1;
 }
+.text-7xl{
+  font-size: 4.5rem;
+  line-height: 1;
+}
 .text-8xl{
   font-size: 6rem;
   line-height: 1;
+}
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 .text-lg{
   font-size: 1.125rem;
@@ -699,9 +831,9 @@ video {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
-.text-7xl{
-  font-size: 4.5rem;
-  line-height: 1;
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 .font-semibold{
   font-weight: 600;
@@ -716,9 +848,9 @@ video {
   --tw-text-opacity: 1;
   color: rgb(253 230 138 / var(--tw-text-opacity));
 }
-.text-amber-300{
+.text-amber-400{
   --tw-text-opacity: 1;
-  color: rgb(252 211 77 / var(--tw-text-opacity));
+  color: rgb(251 191 36 / var(--tw-text-opacity));
 }
 .text-gray-200{
   --tw-text-opacity: 1;
@@ -752,23 +884,31 @@ video {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.text-zinc-100{
+  --tw-text-opacity: 1;
+  color: rgb(244 244 245 / var(--tw-text-opacity));
+}
 .text-zinc-300{
   --tw-text-opacity: 1;
   color: rgb(212 212 216 / var(--tw-text-opacity));
 }
-.text-amber-400{
+.text-amber-300{
   --tw-text-opacity: 1;
-  color: rgb(251 191 36 / var(--tw-text-opacity));
+  color: rgb(252 211 77 / var(--tw-text-opacity));
+}
+.text-amber-500{
+  --tw-text-opacity: 1;
+  color: rgb(245 158 11 / var(--tw-text-opacity));
 }
 .underline{
   text-decoration-line: underline;
 }
-.no-underline{
-  text-decoration-line: none;
-}
 .antialiased{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+.caret-amber-400{
+  caret-color: #fbbf24;
 }
 .caret-amber-500{
   caret-color: #f59e0b;
@@ -776,6 +916,11 @@ video {
 .shadow{
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .outline-none{
@@ -788,35 +933,20 @@ video {
 }
 body {
   font-family: "Outfit", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
+}
+
+.material-symbols-outlined.filled {
+  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 48;
 }.placeholder\:text-neutral-400::-moz-placeholder{
   --tw-text-opacity: 1;
   color: rgb(163 163 163 / var(--tw-text-opacity));
 }.placeholder\:text-neutral-400::placeholder{
   --tw-text-opacity: 1;
   color: rgb(163 163 163 / var(--tw-text-opacity));
-}.before\:bottom-0::before{
-  content: var(--tw-content);
-  bottom: 0px;
-}.before\:right-0::before{
-  content: var(--tw-content);
-  right: 0px;
-}.before\:h-16::before{
-  content: var(--tw-content);
-  height: 4rem;
-}.before\:w-16::before{
-  content: var(--tw-content);
-  width: 4rem;
-}.before\:rounded-full::before{
-  content: var(--tw-content);
-  border-radius: 9999px;
-}.before\:bg-zinc-200::before{
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(228 228 231 / var(--tw-bg-opacity));
-}.before\:blur-0::before{
-  content: var(--tw-content);
-  --tw-blur: blur(0);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }.hover\:underline:hover{
   text-decoration-line: underline;
 }.hover\:brightness-75:hover{
@@ -848,12 +978,6 @@ body {
     color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 }@media (min-width: 640px){
-  .sm\:absolute{
-    position: absolute;
-  }
-  .sm\:left-1\/2{
-    left: 50%;
-  }
   .sm\:ml-0{
     margin-left: 0px;
   }
@@ -863,18 +987,8 @@ body {
   .sm\:block{
     display: block;
   }
-  .sm\:flex{
-    display: flex;
-  }
   .sm\:h-20{
     height: 5rem;
-  }
-  .sm\:max-w-xs{
-    max-width: 20rem;
-  }
-  .sm\:-translate-x-1\/2{
-    --tw-translate-x: -50%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
   .sm\:items-center{
     align-items: center;
@@ -887,6 +1001,9 @@ body {
   }
   .sm\:rounded-lg{
     border-radius: 0.5rem;
+  }
+  .sm\:p-5{
+    padding: 1.25rem;
   }
   .sm\:p-6{
     padding: 1.5rem;
@@ -909,30 +1026,14 @@ body {
     text-align: right;
   }
 }@media (min-width: 768px){
-  .md\:absolute{
-    position: absolute;
-  }
-  .md\:left-1\/2{
-    left: 50%;
-  }
   .md\:inline{
     display: inline;
   }
   .md\:hidden{
     display: none;
   }
-  .md\:w-2\/5{
-    width: 40%;
-  }
-  .md\:min-w-\[400px\]{
-    min-width: 400px;
-  }
   .md\:max-w-xs{
     max-width: 20rem;
-  }
-  .md\:-translate-x-1\/2{
-    --tw-translate-x: -50%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -944,12 +1045,6 @@ body {
     border-top-width: 0px;
   }
 }@media (min-width: 1024px){
-  .lg\:mr-6{
-    margin-right: 1.5rem;
-  }
-  .lg\:inline-block{
-    display: inline-block;
-  }
   .lg\:px-8{
     padding-left: 2rem;
     padding-right: 2rem;
@@ -961,20 +1056,11 @@ body {
   .xl\:left-1\/2{
     left: 50%;
   }
-  .xl\:ml-3{
-    margin-left: 0.75rem;
-  }
   .xl\:ml-0{
     margin-left: 0px;
   }
   .xl\:inline-block{
     display: inline-block;
-  }
-  .xl\:inline{
-    display: inline;
-  }
-  .xl\:hidden{
-    display: none;
   }
   .xl\:-translate-x-1\/2{
     --tw-translate-x: -50%;
