--- a/public/css/app.css
+++ b/public/css/app.css
@@ -435,14 +435,19 @@ video {
 .z-10{
   z-index: 10;
 }
-.z-0{
-  z-index: 0;
-}
 .col-span-2{
   grid-column: span 2 / span 2;
 }
 .row-span-2{
   grid-row: span 2 / span 2;
+}
+.-my-1{
+  margin-top: -0.25rem;
+  margin-bottom: -0.25rem;
+}
+.mx-4{
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 .mx-auto{
   margin-left: auto;
@@ -451,6 +456,17 @@ video {
 .my-1{
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
+}
+.my-2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.my-3{
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+.-mb-1{
+  margin-bottom: -0.25rem;
 }
 .-mt-px{
   margin-top: -1px;
@@ -491,6 +507,9 @@ video {
 .mt-2{
   margin-top: 0.5rem;
 }
+.mt-3{
+  margin-top: 0.75rem;
+}
 .mt-4{
   margin-top: 1rem;
 }
@@ -500,20 +519,8 @@ video {
 .mt-8{
   margin-top: 2rem;
 }
-.ml-3{
-  margin-left: 0.75rem;
-}
-.-mt-2{
-  margin-top: -0.5rem;
-}
-.-mt-6{
-  margin-top: -1.5rem;
-}
-.-mb-3{
-  margin-bottom: -0.75rem;
-}
-.-mb-1{
-  margin-bottom: -0.25rem;
+.mb-2{
+  margin-bottom: 0.5rem;
 }
 .block{
   display: block;
@@ -536,14 +543,23 @@ video {
 .h-10{
   height: 2.5rem;
 }
+.h-14{
+  height: 3.5rem;
+}
 .h-16{
   height: 4rem;
+}
+.h-24{
+  height: 6rem;
 }
 .h-36{
   height: 9rem;
 }
 .h-5{
   height: 1.25rem;
+}
+.h-7{
+  height: 1.75rem;
 }
 .h-8{
   height: 2rem;
@@ -560,8 +576,14 @@ video {
 .h-\[44px\]{
   height: 44px;
 }
-.h-6{
-  height: 1.5rem;
+.h-\[5px\]{
+  height: 5px;
+}
+.h-full{
+  height: 100%;
+}
+.min-h-full{
+  min-height: 100%;
 }
 .min-h-screen{
   min-height: 100vh;
@@ -572,11 +594,17 @@ video {
 .w-5{
   width: 1.25rem;
 }
+.w-7{
+  width: 1.75rem;
+}
 .w-8{
   width: 2rem;
 }
 .w-9{
   width: 2.25rem;
+}
+.w-\[350px\]{
+  width: 350px;
 }
 .w-\[44px\]{
   width: 44px;
@@ -599,14 +627,26 @@ video {
 .max-w-\[70\%\]{
   max-width: 70%;
 }
+.max-w-full{
+  max-width: 100%;
+}
 .flex-grow{
   flex-grow: 1;
+}
+.resize-none{
+  resize: none;
+}
+.grid-flow-row{
+  grid-auto-flow: row;
 }
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 .grid-cols-5{
   grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 .grid-rows-2{
   grid-template-rows: repeat(2, minmax(0, 1fr));
@@ -629,11 +669,17 @@ video {
 .gap-6{
   gap: 1.5rem;
 }
+.gap-4{
+  gap: 1rem;
+}
 .overflow-hidden{
   overflow: hidden;
 }
 .overflow-y-auto{
   overflow-y: auto;
+}
+.rounded{
+  border-radius: 0.25rem;
 }
 .rounded-2xl{
   border-radius: 1rem;
@@ -647,8 +693,8 @@ video {
 .rounded-xl{
   border-radius: 0.75rem;
 }
-.rounded{
-  border-radius: 0.25rem;
+.rounded-3xl{
+  border-radius: 1.5rem;
 }
 .rounded-bl-none{
   border-bottom-left-radius: 0px;
@@ -662,14 +708,14 @@ video {
 .border-b-2{
   border-bottom-width: 2px;
 }
-.border-t{
-  border-top-width: 1px;
-}
 .border-l-2{
   border-left-width: 2px;
 }
 .border-r-2{
   border-right-width: 2px;
+}
+.border-t{
+  border-top-width: 1px;
 }
 .border-t-2{
   border-top-width: 2px;
@@ -682,13 +728,13 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(255 251 235 / var(--tw-border-opacity));
 }
-.border-gray-200{
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
-}
 .border-amber-500{
   --tw-border-opacity: 1;
   border-color: rgb(245 158 11 / var(--tw-border-opacity));
+}
+.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 .bg-amber-200{
   --tw-bg-opacity: 1;
@@ -734,9 +780,17 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(212 212 216 / var(--tw-bg-opacity));
 }
+.bg-red-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
 .bg-red-400{
   --tw-bg-opacity: 1;
   background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+.bg-red-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 .bg-opacity-30{
   --tw-bg-opacity: 0.3;
@@ -756,6 +810,13 @@ video {
 .p-6{
   padding: 1.5rem;
 }
+.p-3{
+  padding: 0.75rem;
+}
+.px-1{
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
 .px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -768,6 +829,10 @@ video {
   padding-left: 1rem;
   padding-right: 1rem;
 }
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -775,6 +840,10 @@ video {
 .py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 .py-3{
   padding-top: 0.75rem;
@@ -784,15 +853,17 @@ video {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.px-1{
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
 .pb-1{
   padding-bottom: 0.25rem;
 }
 .pb-2{
   padding-bottom: 0.5rem;
+}
+.pb-4{
+  padding-bottom: 1rem;
+}
+.pt-0{
+  padding-top: 0px;
 }
 .pt-2{
   padding-top: 0.5rem;
@@ -835,6 +906,10 @@ video {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
 .font-semibold{
   font-weight: 600;
 }
@@ -851,6 +926,10 @@ video {
 .text-amber-400{
   --tw-text-opacity: 1;
   color: rgb(251 191 36 / var(--tw-text-opacity));
+}
+.text-amber-900{
+  --tw-text-opacity: 1;
+  color: rgb(120 53 15 / var(--tw-text-opacity));
 }
 .text-gray-200{
   --tw-text-opacity: 1;
@@ -891,14 +970,6 @@ video {
 .text-zinc-300{
   --tw-text-opacity: 1;
   color: rgb(212 212 216 / var(--tw-text-opacity));
-}
-.text-amber-300{
-  --tw-text-opacity: 1;
-  color: rgb(252 211 77 / var(--tw-text-opacity));
-}
-.text-amber-500{
-  --tw-text-opacity: 1;
-  color: rgb(245 158 11 / var(--tw-text-opacity));
 }
 .underline{
   text-decoration-line: underline;
